# another-cuda-sift

./: .bazelrc  .clangd  .gitignore  .gitmodules  CODEOWNERS  MODULE.bazel  WORKSPACE  readme.md
cvUtils/: BUILD  Conversion.cc  Conversion.hh  ConversionImpl.hpp  readme.md
doc/: faq.md
sift_cuda/image_func/: BUILD  Filter.cu  Filter.cuh  FilterImpl.cuh  MatOps.cu  MatOps.cuh  MatOpsImpl.cuh  Resize.cu  Resize.cuh  ResizeImpl.cuh  utils.cu  utils.cuh
sift_cuda/interface/: BUILD  Detector.cu  Detector.hh  HostInterface.cu  HostInterface.hh
sift_cuda/perf/: BUILD  CudaTypeSerialization.cuh  DeserializationUtils.cuh  PerfData.cu  PerfData.cuh  Serialization.hpp
sift_cuda/sift_func/: BUILD  Match.cu  Match.cuh  SiftOps.cu  SiftOps.cuh
sift_cuda/types/: BUILD  CudaImage.cu  CudaImage.cuh  CudaMemRAII.cuh  CudaSiftConfig.hh  HostImage.hh  KeyPoint.cu  KeyPoint.cuh  SiftData.cuh
sift_cuda/utils/: BUILD  CudaMemcpyUtils.cu  CudaMemcpyUtils.cuh  CudaNavGraphManager.cuh  CudaStreamPool.cuh  GaussianUtils.cc  GaussianUtils.hh
tool/: BUILD  allocation_example.cc  detection_example.cc  extract_and_match_example.cc  perf.cu
