###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_cuda", version = "0.2.3")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "/usr/local/cuda",
)
use_repo(cuda, "local_cuda")

# Performance benchmark
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "msgpack-c", version = "6.1.0")
bazel_dep(name = "cli11", version = "2.4.2")
